# svm-socp-lp-solvers

./: .gitignore  README.md  datos_Titanic.xlsx  pyproject.toml
src/svm_socp_lp_solvers/: __init__.py  socp_lp.py  svm_lp.py  utils.py
src/svm_socp_lp_solvers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/svm_socp_lp_solvers/.ipynb_checkpoints/: svm_lp-checkpoint.py
src/svm_socq_lp_solvers.egg-info/: PKG-INFO  SOURCES.txt
